--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ python:
 
 install:
   - pip install -r requirements.txt
+  - pip install pytest-cov
 
 script:
-  - pytest --cov=ocxsect 
+  - pytest --cov=ocxsect
