--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install pytest-cov
+  - pip install codecov
 
 script:
   - pytest --cov=ocxsect
